[package]
name = "donter"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = { version = "1.0.0-alpha.17" }
minijinja = { version = "2.0.2", features = ["loader"]}
serde = { version = "1.0.203", features = ["serde_derive"] }
url = { version = "2", features = ["serde"]}
tar = { version = "0.4.41" }
clap = { version = "4.5.8", features = ["derive"]}
yaml-rust2 = { version = "0.8.1" }
